feat: Ajout de la documentation